update authenticate
